# browserAgent

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: pull_request_template.md
experiment_logs/: gemma4_26b_20260409_080815.md
src/browser_agent/: config.py  display.py  main.py  memory.py  model_factory.py  models.py  orchestrator.py  session_logger.py  smart_locator.py
src/browser_agent/agents/: executor.py  planner.py
src/browser_agent/browser/: session.py
src/browser_agent/tools/: __init__.py  browser_control.py  datetime.py  dom_query.py  extraction.py  human.py  interaction.py  markdown.py  memory_tools.py  navigation.py  screenshot.py  search.py  smart_tools.py  tabs.py
